Metadata for sharing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magellan - Semantic Search for Websites</title>
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta
+      property="og:title"
+      content="Magellan - Semantic Search for Websites"
+    />
+    <meta
+      property="og:description"
+      content="Your intelligent page navigator, powered by semantic search. Find what you mean, not just what you typed."
+    />
+    <meta
+      property="og:image"
+      content="https://kpulgari.com/magellan/public/thumbnail.png"
+    />
+    <meta property="og:url" content="https://kpulgari.com/magellan" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Magellan - Semantic Search for Websites"
+    />
+    <meta
+      name="twitter:description"
+      content="Your intelligent page navigator, powered by semantic search. Find what you mean, not just what you typed."
+    />
+    <meta
+      name="twitter:image"
+      content="https://kpulgari.com/magellan/public/thumbnail.png"
+    />
+
     <style>
       :root {
         --primary: #6366f1; /* Vibrant indigo */
