--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magellan - Semantic Search for Websites</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/logo.png" />
+    <link rel="apple-touch-icon" href="./public/logo.png" />
+    <link rel="shortcut icon" href="./public/logo.png" />
+
     <!-- Open Graph / Social Media Meta Tags -->
     <meta
       property="og:title"
