--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       }
 
       .hero-screenshot-placeholder {
-        width: 80%;
+        width: 100%;
         max-width: 900px;
         margin: 50px auto 0;
         border-radius: 12px;
@@ -224,15 +224,12 @@
         transition: transform 0.3s ease;
       }
 
-      .hero-screenshot-placeholder:hover {
-        transform: scale(1.02);
-      }
-
       .hero-screenshot-placeholder img {
         width: 100%;
         height: auto;
         display: block;
         border-radius: 12px;
+        object-fit: contain;
       }
 
       /* Features Section */
@@ -559,7 +556,8 @@
           font-size: 1.1em;
         }
         .hero-screenshot-placeholder {
-          height: 300px; /* Adjust for smaller screens */
+          width: 90%;
+          margin: 30px auto 0;
         }
         nav {
           flex-direction: column;
@@ -603,6 +601,10 @@
         }
         .hero p.subtitle {
           font-size: 1em;
+        }
+        .hero-screenshot-placeholder {
+          width: 95%;
+          margin: 20px auto 0;
         }
         .hero-cta-button {
           padding: 12px 25px;
@@ -705,7 +707,7 @@
           <li><a href="#showcase">Showcase</a></li>
         </ul>
         <a
-          href="YOUR_CHROME_STORE_LINK_HERE"
+          href="https://kpulgari.com/magellan/"
           target="_blank"
           class="cta-button-nav"
           ><img
@@ -730,7 +732,7 @@
             typed.
           </p>
           <a
-            href="YOUR_CHROME_STORE_LINK_HERE"
+            href="https://kpulgari.com/magellan/"
             target="_blank"
             class="hero-cta-button"
             ><img
@@ -975,7 +977,7 @@
             and find what you mean, effortlessly.
           </p>
           <a
-            href="YOUR_CHROME_STORE_LINK_HERE"
+            href="https://kpulgari.com/magellan/"
             target="_blank"
             class="hero-cta-button"
             ><img
