--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
                 />
               </div>
               <div class="screenshot-caption">
-                <strong>Context-driven Answers</strong>Get precise responses
+                <strong>Context-Driven Answers</strong>Get precise responses
                 with highlighted citations.
               </div>
             </div>
