Privacy policy styling

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,35 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Magellan - Privacy Policy</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div
-      style="
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-inline: 10%;
-      "
-    >
+    <main>
       <h1>Magellan - Privacy Policy</h1>
-      <p>Last updated: May 30, 2025</p>
+      <p class="last-updated">Last updated: May 30, 2025</p>
       <p>
         This Privacy Policy describes Our policies and procedures on the
         collection, use and disclosure of Your information when You use the
         Service and tells You about Your privacy rights and how the law protects
-        You.s
+        You.
       </p>
       <p>
         We use Your Personal data to provide and improve the Service. By using
         the Service, You agree to the collection and use of information in
-        accordance with this Privacy Policy. This Privacy Policy has been
-        created with the help of the
-        <a
-          href="https://www.termsfeed.com/privacy-policy-generator/"
-          target="_blank"
-          >Privacy Policy Generator</a
-        >.
+        accordance with this Privacy Policy.
       </p>
       <h2>Interpretation and Definitions</h2>
       <h3>Interpretation</h3>
@@ -509,6 +497,6 @@
           </p>
         </li>
       </ul>
-    </div>
+    </main>
   </body>
 </html>
