Add chrome link

--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
             </li>
           </ul>
           <a
-            href="https://kpulgari.com/magellan/"
+            href="https://chromewebstore.google.com/detail/magellan/ekkajebdacenikgmbgkdnmememnlibnd?authuser=0&hl=en"
             target="_blank"
             class="cta-button-nav"
             >Add to Chrome</a
@@ -1034,7 +1034,7 @@
           </p>
           <div class="chrome-store-badge-container">
             <a
-              href="https://kpulgari.com/magellan/"
+              href="https://chromewebstore.google.com/detail/magellan/ekkajebdacenikgmbgkdnmememnlibnd?authuser=0&hl=en"
               target="_blank"
               aria-label="Get Magellan on the Chrome Web Store"
             >
@@ -1338,7 +1338,7 @@
           </p>
           <div class="chrome-store-badge-container">
             <a
-              href="https://kpulgari.com/magellan/"
+              href="https://chromewebstore.google.com/detail/magellan/ekkajebdacenikgmbgkdnmememnlibnd?authuser=0&hl=en"
               target="_blank"
               aria-label="Get Magellan on the Chrome Web Store"
             >
