--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
             <li><a href="#showcase">Showcase</a></li>
             <li>
               <a
-                href="https://github.com/NickTrapp/Magellan"
+                href="https://github.com/magellan-extension/magellan"
                 target="_blank"
                 class="github-link"
               >
@@ -1198,7 +1198,7 @@
                 >
                 and you're ready to go. Check out our
                 <a
-                  href="https://github.com/NickTrapp/Magellan"
+                  href="https://github.com/magellan-extension/magellan"
                   target="_blank"
                   style="color: var(--primary); text-decoration: underline"
                   >GitHub repository</a
@@ -1357,7 +1357,10 @@
       <div class="container">
         <p>© 2025 Magellan. All rights reserved.</p>
         <div class="footer-links">
-          <a href="https://github.com/NickTrapp/Magellan" target="_blank">
+          <a
+            href="https://github.com/magellan-extension/magellan"
+            target="_blank"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
