--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Magellan - Query any webpage with AI</title>
+    <title>Magellan - Query Any Webpage with AI</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./public/logo.png" />
