--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
         transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         position: relative;
         cursor: pointer;
+        aspect-ratio: 16/9;
       }
 
       .hero-screenshot-placeholder:hover {
@@ -1046,7 +1047,14 @@
             </a>
           </div>
           <div class="hero-screenshot-placeholder">
-            <img src="./public/hero.png" alt="Magellan Screenshot" />
+            <video
+              src="./public/demo.mp4"
+              autoplay
+              muted
+              loop
+              width="100%"
+              height="100%"
+            ></video>
           </div>
         </div>
       </section>
