--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,12 @@
               autoplay
               muted
               loop
+              playsinline
+              preload="metadata"
+              poster="./public/hero.png"
               width="100%"
               height="100%"
+              aria-label="Magellan demo video"
             ></video>
           </div>
         </div>
