--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
           <p class="subtitle">
             Your free AI-powered page navigator that understands context and
             meaning. Ask questions naturally and get precise answers from any
-            webpage instantly.
+            webpage instantly, with smart citations and multiple search modes.
           </p>
           <div class="chrome-store-badge-container">
             <a
@@ -1087,10 +1087,14 @@
                   <path d="M7 9H17V11H7V9ZM7 12H14V14H7V12Z" />
                 </svg>
               </div>
-              <h3>Conversational AI</h3>
+              <h3>Multiple Search Modes</h3>
               <p>
-                Ask questions in natural language and get intelligent answers
-                powered by Google Gemini. No more keyword guessing games.
+                Choose how you want to search:
+                <ul style="list-style: none; margin-top: 8px; padding-left: 0;">
+                  <li>• Page Context: Search only within current page</li>
+                  <li>• Blended: Search page first, then use general knowledge</li>
+                  <li>• General Knowledge: Use only general knowledge</li>
+                </ul>
               </p>
             </div>
             <div class="feature-card">
@@ -1113,8 +1117,7 @@
               </div>
               <h3>Smart Citations</h3>
               <p>
-                See exactly where each answer comes from with toggleable
-                highlights and one-click navigation to source content.
+                Get direct links to relevant parts of the page with visual highlights that show exactly where each answer comes from.
               </p>
             </div>
             <div class="feature-card">
@@ -1129,10 +1132,9 @@
                   />
                 </svg>
               </div>
-              <h3>Context-Aware Tabs</h3>
+              <h3>Conversation History</h3>
               <p>
-                Each tab maintains its own chat history and memory, ensuring
-                your questions stay relevant to the content you're viewing.
+                Keep track of your questions and answers with a persistent chat history that maintains context throughout your browsing session.
               </p>
             </div>
             <div class="feature-card">
@@ -1150,10 +1152,9 @@
                   />
                 </svg>
               </div>
-              <h3>Citation Recall</h3>
+              <h3>Visual Highlights</h3>
               <p>
-                Easily pull up sources from earlier in the chat, even if you've
-                moved on to new questions.
+                See exactly where information comes from with highlighted text that makes it easy to verify sources and understand context.
               </p>
             </div>
             <div class="feature-card">
@@ -1174,10 +1175,9 @@
                   />
                 </svg>
               </div>
-              <h3>Seamless Navigation</h3>
+              <h3>Sleek, Responsive UI</h3>
               <p>
-                Jump to the right spot instantly with smooth scrolling and
-                intuitive controls for a frictionless experience.
+                Enjoy a clean, modern interface that fits seamlessly into your browser workflow and adapts perfectly to any screen size.
               </p>
             </div>
             <div class="feature-card" style="animation-delay: 0.1s">
